# nicotine

./: Cargo.toml  README.md  change.md  install-github.sh  install-local.sh
.github/workflows/: release.yml
assets/: nicotine.desktop
src/: config.rs  cycle_state.rs  daemon.rs  main.rs  mouse_listener.rs  overlay.rs  wayland_backends.rs  window_manager.rs  x11_manager.rs
